<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <TextView
        android:id="@+id/identity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/select_identity"
        android:textColor="@color/white"
        android:textSize="16.3sp" />

    <TextView
        android:id="@+id/born"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:drawableTop="@drawable/baby_born"
        android:gravity="center"
        android:text="@string/born"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/pregnancying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp"
        android:layout_marginTop="132dp"
        android:drawableTop="@drawable/pregnancy_period"
        android:gravity="center"
        android:text="@string/pregnancying"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/for_pregnancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/born"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="20dp"
        android:drawableTop="@drawable/for_pregnancy_period"
        android:gravity="center"
        android:text="@string/for_pregnancy"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="82dp"
        android:layout_height="26.5dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/pregnancying"
        android:layout_marginRight="23dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/login"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/direct_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/direct_login"
            android:textColor="@color/border_color"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>