<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/login_head_porttrait_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/big_head_portrait" />

        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="11dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/login_register_border"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register_now"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/register_now"
                android:textColor="@color/border_color"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="46dp"
            android:background="@null"
            android:drawableLeft="@drawable/login_user"
            android:drawablePadding="9dp"
            android:hint="@string/login_account"
            android:textColorHint="@color/word_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="7.5dp"
            android:background="@color/border_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="15.5dp"
            android:background="@null"
            android:drawableLeft="@drawable/login_password"
            android:drawablePadding="9dp"
            android:hint="@string/login_password"
            android:textColorHint="@color/word_color"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="37dp"
            android:layout_marginRight="37dp"
            android:layout_marginTop="7.5dp"
            android:background="@color/border_color" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="13dp"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="51dp"
            android:layout_marginTop="13dp"
            android:text="@string/question"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/third_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="12.5dp"
            android:gravity="center_horizontal"
            android:text="@string/third_login"
            android:textColor="@color/word_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView 
            android:id="@+id/qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/qq"
            android:gravity="center"
            android:text="@string/qq"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView 
            android:id="@+id/sina_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/sina_weibo"
            android:gravity="center"
            android:text="@string/sina_weibo"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView 
            android:id="@+id/wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/wechat"
            android:gravity="center"
            android:text="@string/wechat"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>