<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >
    

    <ImageButton 
        android:id="@+id/back_forgetpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_before"
        android:background="@null"
        android:layout_margin="11dp" />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/login_button" >
        
        <EditText 
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/register_password"
            android:drawablePadding="16dp"
            android:background="@null"
            android:padding="9dp"
            android:hint="@string/new_password"
            android:textSize="12sp" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/login_button" >
        
        <EditText 
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/register_password"
            android:drawablePadding="16dp"
            android:background="@null"
            android:padding="9dp"
            android:hint="@string/confirm_password"
            android:textSize="12sp" />
    </RelativeLayout>
    
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_button"
        android:text="@string/confirm"
        android:textColor="@color/register_word_color"
        android:textSize="16sp" />
</LinearLayout>
