<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >
    
    <ImageButton
        android:id="@+id/back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:background="@null"
        android:src="@drawable/back_before" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_button" >

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:background="@null"
            android:drawableLeft="@drawable/register_phone_number"
            android:drawablePadding="16dp"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:padding="9dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/word_color"
            android:textSize="12sp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/login_button"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/input_phone_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:background="@null"
            android:drawableLeft="@drawable/register_password"
            android:drawablePadding="16dp"
            android:hint="@string/input_code"
            android:padding="9dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/word_color"
            android:textSize="12sp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_register_border" >

            <Button
                android:id="@+id/get_phone_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="5dp"
                android:text="@string/message_code"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
    
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_button"
        android:text="@string/next"
        android:textColor="@color/register_word_color"
        android:textSize="16sp" />

</LinearLayout>
