<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp" >

        <ImageButton
            android:id="@+id/regidter_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/back_before" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/login_button"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0.5dp"
            android:background="@null"
            android:drawableLeft="@drawable/register_phone_number"
            android:drawablePadding="32dp"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:padding="9dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/login_button"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:background="@null"
            android:drawableLeft="@drawable/register_password"
            android:drawablePadding="32dp"
            android:hint="@string/set_password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/login_button"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/check_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:background="@null"
            android:drawableLeft="@drawable/register_password"
            android:drawablePadding="32dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/register_button"
        android:text="@string/register"
        android:textColor="@color/register_word_color"
        android:textSize="16sp" />

</LinearLayout>